<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/drawerCoffee" android:title="@string/drawer_coffee" android:icon="@android:drawable/ic_menu_search" />
        <item android:id="@+id/drawerParks" android:title="@string/drawer_parks" android:icon="@android:drawable/ic_menu_myplaces" />
        <item android:id="@+id/drawerMuseums" android:title="@string/drawer_museums" android:icon="@android:drawable/ic_menu_gallery" />
        <item android:id="@+id/drawerShopping" android:title="@string/drawer_shopping" android:icon="@android:drawable/ic_menu_agenda" />
        <item android:id="@+id/drawerSettings" android:title="@string/drawer_settings" android:icon="@android:drawable/ic_menu_manage" />
    </group>
</menu>
